kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy: {}
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: backend:1.3
        name: backend
        ports:
        - containerPort: 80
        resources: {}
        imagePullPolicy: Never
status: {}
