kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80          # The port your frontend app is exposed on inside the container
      targetPort: 80     # Same as the container port (frontend container)
      nodePort: 30001    # NodePort to expose the frontend externally (between 30000-32767)
